# A21

./: CMakeLists.txt  README.md
Core/Src/Aufgabe_1/: main.c
Core/Src/Aufgabe_3/: main.c
Core/Src/Aufgabe_5/: main.c
Core/Src/Aufgabe_6/: main.c
